--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -13,10 +13,10 @@
 }
 
 .footer {
-  display: flex;
+  
   flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
+  padding: 1rem ;
+  border-top: px solid #eaeaea;
   justify-content: center;
   align-items: center;
 }
@@ -24,8 +24,13 @@
 .footer a {
   display: flex;
   justify-content: center;
+  text-align: center;
   align-items: center;
   flex-grow: 1;
+  border-radius: 5px;
+  border: 1px solid rgb(188, 188, 223);
+  box-shadow: 2px 8px 10px gray;
+  
 }
 
 .title a {
@@ -73,18 +78,6 @@
   max-width: 800px;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
 .card:hover,
 .card:focus,
 .card:active {
@@ -92,16 +85,6 @@
   border-color: #0070f3;
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
 
 .logo {
   height: 1em;
@@ -113,7 +96,4 @@
     width: 100%;
     flex-direction: column;
   }
-}
-.Sagan{
-
 }
